refactor: include attachment data only for images as thumbnails